--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,28 @@
-Source: template-repository
-Section: unknown
+Source: python-termstyle
+Section: python
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
+Maintainer: Debian OpenStack <team+openstack@tracker.debian.org>
+Uploaders:
+ Thomas Goirand <zigo@debian.org>,
+Build-Depends:
+ debhelper-compat (= 10),
+ dh-python,
+ openstack-pkg-tools (>= 99~),
+ python3-all,
+ python3-setuptools,
 Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Vcs-Browser: https://salsa.debian.org/openstack-team/python/python-termstyle
+Vcs-Git: https://salsa.debian.org/openstack-team/python/python-termstyle.git
+Homepage: http://gfxmonk.net/dist/0install/python-termstyle.xml
 
-Package: template-repository
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Package: python3-termstyle
+Architecture: all
+Depends:
+ ${misc:Depends},
+ ${python3:Depends},
+Description: console colouring for python - Python 3.x
+ Termstyle is a simple Python library for adding coloured output to terminal
+ (console) programs. The definitions come from ECMA-048, the "Control Functions
+ for Coded Character Sets" standard.
+ .
+ This package contains the Python 3.x module.
