--- a/debian/rules
+++ b/debian/rules
@@ -1,4 +1,19 @@
 #!/usr/bin/make -f
 
+UPSTREAM_GIT := https://github.com/gfxmonk/termstyle.git
+include /usr/share/openstack-pkg-tools/pkgos.make
+
 %:
-	dh $@
+	dh $@ --buildsystem=python_distutils --with python3
+
+override_dh_auto_clean:
+	rm -rf build *.egg-info
+	find . -iname '*.pyc' -delete
+	for i in $$(find . -type d -iname __pycache__) ; do rm -rf $$i ; done
+
+override_dh_auto_build:
+	echo "Do nothing..."
+
+override_dh_auto_install:
+	pkgos-dh_auto_install --no-py2
+
